--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christopher Gjersing - Full Stack Engineer</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   </head>
   <body>
     <div id="root"></div>
